# astrix-desktop-wallet

./: LICENSE  README.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: create-icons.src
src-tauri/src/: main.rs
